# nnomad

./: .gitignore  LICENSE  README.md  dune-project  grad.ml  nnomad.opam  nomad.opam  presentation.txt
examples/: examples.ipynb
src/: bisection.mli  constants.ml  derivatives.ml  derivatives.mli  dune  eval.ml  eval.mli  expr.ml  expr.mli  grad.ml  matrix.ml  newton.ml  optimization.ml  optimization.mli  simplify.ml  simplify.mli  solver.ml
src/optim/: bisection.ml  bisection.mli  gradient_descent.ml  gradient_descent.mli  newton.ml  newton.mli  optimization_types.ml  optimization_types.mli
test/: dune  test.ml
