(lang dune 3.17)

(name nomad)

(source
 (github igorjakus/nomad))

(authors "Igor Jakus <igorjakus@protonmail.com>")
(maintainers "Igor Jakus <igorjakus@protonmail.com>")


(package
 (name nomad)
 (synopsis "Numerical optimization, mathematics and automatic differentiation library")
 (description "Numerical optimization, mathematics and automatic differentiation library")
)