opam-version: "2.0"
name: "nnomad"
version: "~dev"
synopsis: "Numerical optimization, mathematics and automatic differentiation library"
maintainer: "Igor Jakus <igorjakus@protonmail.com>"
authors: ["Igor Jakus"]
license: "MIT"
homepage: "https://github.com/igorjakus/nnomad"
bug-reports: "https://github.com/igorjakus/nnomad/issues"
depends: [
  "ocaml" {>= "5.2.1"}
  "dune" {>= "3.17.0"}
]